--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,8 @@ before_install:
 install:
   # linking against libhdf5_cpp fails right now if we do not use this conda environment.
   # it is unclear why at this time.
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/2019.4/release/qiime2-2019.4-py36-linux-conda.yml -O environment.yml; fi
+  # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/2019.4/release/qiime2-2019.4-py36-linux-conda.yml -O environment.yml; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://data.qiime2.org/distro/core/qiime2-2017.5-conda-linux-64.txt -O environment.yml; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/2019.4/release/qiime2-2019.4-py36-osx-conda.yml -O environment.yml; fi
   - conda env create -n test-env --file environment.yml python=$CONDA_PY
   - source activate test-env
@@ -46,7 +47,7 @@ install:
   - conda install --yes flake8 nose
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++` && echo "BASE"; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++` && echo $ "LINKERBASE"; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/ -fno-plt//g' `which h5c++` && echo "remove -fno-plt"; fi
+    # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/ -fno-plt//g' `which h5c++` && echo "remove -fno-plt"; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sed -i '' 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++` && echo "BASE"; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sed -i '' 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++` && echo "LINKERBASE"; fi
   - export CC=`which h5c++`
