--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: UniFrac CI
 
 on:
@@ -8,8 +6,25 @@ on:
   pull_request:
     branches: [ master ]
 
+
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:       
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: flake8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.6
+    - name: install dependencies
+      run: python -m pip install --upgrade pip
+    - name: lint
+      run: |
+        pip install -q flake8
+        flake8 unifrac setup.py
+      
   build-and-test:
     needs: lint
     strategy:
