--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,16 @@ jobs:
         conda activate unifrac
         conda config --add channels conda-forge
         conda install --yes cython "hdf5>=1.8.17" biom-format numpy "h5py>=2.7.0" "scikit-bio>=0.5.1" flake8 nose lz4
-        if [[ "$(uname -s)" == "linux" ]]; 
-        then 
-          SED='sed -i'
-          $SED 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
-          $SED 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
-          $SED 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
-        else 
-          SED='sed -i '"'"''"'"' '
-        fi
+        echo "$(uname -s)"
+        #if [[ "$(uname -s)" == "linux" ]]; 
+        #then 
+        SED='sed -i'
+        $SED 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+        $SED 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+        $SED 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+        #else 
+        #  SED='sed -i '"'"''"'"' '
+        #fi
         $SED "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++` 
         $SED "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++`
         $SED 's/^STATIC_AVAILABLE=.*/STATIC_AVAILABLE="no"/' `which h5c++`
