--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,17 +43,24 @@ jobs:
         conda create --yes -n unifrac python=3.6
         conda activate unifrac
         conda config --add channels conda-forge
-        conda install --yes cython "hdf5>=1.8.17" biom-format numpy "h5py>=2.7.0" "scikit-bio>=0.5.1" flake8 nose lz4
+        conda install --yes cython "hdf5>=1.8.17" biom-format numpy "h5py>=2.7.0" "scikit-bio>=0.5.1" flake8 nose lz4 
         echo "$(uname -s)"
-        #if [[ "$(uname -s)" == "linux" ]]; 
-        #then 
-        SED='sed -i'
-        $SED 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
-        $SED 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
-        $SED 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
-        #else 
-        #  SED='sed -i '"'"''"'"' '
-        #fi
+        ls /usr/local/bin/gcc*
+        if [[ "$(uname -s)" == "Linux" ]]; 
+        then 
+          export CC_FOR_BUILD=/usr/local/bin/gcc-4.9
+          export CXX_FOR_BUILD=/usr/local/bin/g++-4.9
+          SED='sed -i'
+          $SED 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+          $SED 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+          $SED 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+        else 
+          export CC_FOR_BUILD=clang
+          export CXX_FOR_BUILD=clang++
+          SED='sed -i '"'"''"'"' '
+        fi
+        $CC_FOR_BUILD -v 
+        $CXX_FOR_BUILD -v
         $SED "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++` 
         $SED "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++`
         $SED 's/^STATIC_AVAILABLE=.*/STATIC_AVAILABLE="no"/' `which h5c++`
