Change GPU compile to co-exist with CPU code path (#125)
* Add biom_interface virtual class that has no dependencies to HDF5, and use it in unifrac.cpp/hpp

* Fix missing biom to biom_interface changes

* Do not use h5c++ for compiling unifrac.o... use just plain CXX

* Move tasks under the SUCMP_NM namespace; su_cpu by default, su_acc in GPU mode

* Move ACC out of initialize_sample_counts

* Remove dead code, now that OPENMP is always used

* Move the code than may use ACC into unifrac_cmp.cpp

* Move ACC-optional code into a separate namespace... only CPU code path currenlty working

* Add conditional support for ACC code path

* Use the shared library in cmdline tools

* Move initialize_sample_counts into unifrac_cmp.cpp, as it depends on unifrac_task.hpp

* Add recipe for unifrac_cmp_acc.o and rename unifrac_cmp.o into unifrac_cmp_cpu.o

* Move no-ACC code into libssu_cpu.so

* Use CXX instead of h5c++ for creating libssu_cpu.so

* Add support for ACC_CXX

* Add missing virtual destructor

* Force gnu OMP for ACC for consistency

* Clean up the Makefile

* Fix typo

* Fix MacOS build

* Make INFO printout optional (UNIFRAC_GPU_INFO)

* Update GPU compile instructions

* Fix dependency

* Add GPU compilation

* Fix typo

* Fix typo

* Use CPP, not system gcc

* Clean path

* Revert "Use CPP, not system gcc"

This reverts commit b0d637b914b04fe1abb8932616561d2a991392a8.

* Improve dependency handling, create proper internal shlib

* Clean up dependencies

* Add explicit internal linking for the test binaries

* biom shoul dnot be in the internal shlib

* Fix typo

* Add acc library to rapi test

* Improve testing

* Minor doc changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,13 +75,54 @@ jobs:
           clang -v
         fi
         which h5c++
+        if [[ "$(uname -s)" == "Linux" ]];
+        then
+          ORGPATH=$PATH
+          # Enable OpenACC build
+          curl -s -S -o nvhpc_2020.tar.gz  https://developer.download.nvidia.com/hpc-sdk/20.9/nvhpc_2020_209_Linux_x86_64_cuda_11.0.tar.gz
+          tar xpzf nvhpc_2020.tar.gz
+          rm -f nvhpc_2020.tar.gz
+
+          mkdir conda_nv_bins
+          (cd conda_nv_bins && for f in \
+              ar as c++ cc cpp g++ gcc ld nm ranlib strip; \
+           do \
+             ln -s `which x86_64-conda-linux-gnu-${f}` ${f}; \
+           done )
+
+          PATH=${PWD}/conda_nv_bins:$PATH
+
+          sed -i -e "s#PATH=/#PATH=$PWD/conda_nv_bins:/#g" \
+            nvhpc_*/install_components/install 
+          sed -i -e "s#PATH=/#PATH=$PWD/conda_nv_bins:/#g" \
+            nvhpc_*/install_components/*/*/compilers/bin/makelocalrc
+          sed -i -e "s#PATH=/#PATH=$PWD/conda_nv_bins:/#g" \
+            nvhpc_*/install_components/*/*/compilers/bin/addlocalrc
+          sed -i -e "s#PATH=/#PATH=$PWD/conda_nv_bins:/#g" \
+            nvhpc_*/install_components/install_cuda
+
+          export NVHPC_INSTALL_DIR=$PWD/hpc_sdk
+          export NVHPC_SILENT=true
+
+          (cd nvhpc_*_x86_64_*; ./install)
+
+          export PATH=$PATH:`ls -d $PWD/hpc_sdk/*/202*/compilers/bin`
+          export ACC_CXX=pgc++
+        fi
         pushd sucpp
         make test
         make main
         make api
+        if [[ "$(uname -s)" == "Linux" ]];
+        then
+          # capi_test needs standard gcc
+          ACCPATH=$PATH
+          export PATH=$ORGPATH
+        fi
         make capi_test
         if [[ "$(uname -s)" == "Linux" ]]; 
         then
+          export PATH=$ACCPATH
           make rapi_test
         fi
         popd
@@ -92,6 +133,7 @@ jobs:
       run: |
         conda activate unifrac
         pushd sucpp
+        export UNIFRAC_GPU_INFO=Y
         ./test_su
         ./test_api
         ./test_ska
