--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -1,25 +1,17 @@
-CXX := h5c++
+H5CXX := h5c++
 
 PLATFORM := $(shell uname -s)
-COMPILER := $(shell ($(CXX) -v 2>&1) | tr A-Z a-z )
+COMPILER := $(shell ($(H5CXX) -v 2>&1) | tr A-Z a-z )
 
 ifdef DEBUG
-	ifneq (,$(findstring pgi,$(COMPILER)))
-		OPT = -g
-	else
-		OPT = -O0 -DDEBUG=1 --debug -g -ggdb
-	endif
+	OPT = -O0 -DDEBUG=1 --debug -g -ggdb
 else
-	ifneq (,$(findstring pgi,$(COMPILER)))
-		OPT = -fast
-	else
-	  ifneq (,$(findstring gcc,$(COMPILER)))
-		OPT = -O4
-		TGTFLAGS = -fwhole-program
-	  else
-		OPT = -O3
-	  endif
-	endif
+  ifneq (,$(findstring gcc,$(COMPILER)))
+	OPT = -O4
+	TGTFLAGS = -fwhole-program
+  else
+	OPT = -O3
+  endif
 endif
 
 ifeq ($(PREFIX),)
@@ -36,50 +28,18 @@ endif
 
 EXEFLAGS =
 
-ifneq (,$(findstring pgi,$(COMPILER)))
-	MPFLAG =  -mp
-else
-	MPFLAG = -fopenmp
-endif
+MPFLAG = -fopenmp
 
 LDDFLAGS += $(MPFLAG)
 CPPFLAGS += $(MPFLAG)
 
-ifndef NOGPU
-	ifneq (,$(findstring pgi,$(COMPILER)))
-		CPPFLAGS += -acc
-	        ifeq ($(PERFORMING_CONDA_BUILD),True)
-	            CPPFLAGS += -ta=tesla:ccall
-		else
-	            CPPFLAGS += -ta=tesla
-                endif
-		# optional info
-		CPPFLAGS += -Minfo=accel
-	        LDDFLAGS += -shlib -acc -Bstatic_pgi
-	        EXEFLAGS += -Bstatic_pgi
-	endif	
-	ifdef SMALLGPU
-		CPPFLAGS += -DSMALLGPU
-	endif
-
-endif
-
-ifneq (,$(findstring pgi,$(COMPILER)))
-	ifeq ($(PERFORMING_CONDA_BUILD),True)
-		CPPFLAGS += -tp=px
-	endif
+ifeq ($(PERFORMING_CONDA_BUILD),True)
+	CPPFLAGS += -mtune=generic
 else
-	ifeq ($(PERFORMING_CONDA_BUILD),True)
-		CPPFLAGS += -mtune=generic
-	else
-         	CPPFLAGS += -mfma -march=native
-	endif
+       	CPPFLAGS += -mfma -march=native
 endif
 
-ifeq (,$(findstring pgi,$(COMPILER)))
-	# basically, not gcc
-	CPPFLAGS += -Wextra -Wno-unused-parameter
-endif
+CPPFLAGS += -Wextra -Wno-unused-parameter
 
 ifeq ($(PLATFORM),Darwin)
         BLASLIB=-llapacke -lcblas
@@ -88,22 +48,87 @@ else
 endif
 
 
+LDDFLAGS += -L$(CONDA_PREFIX)/lib
 CPPFLAGS += -Wall  -std=c++11 -pedantic -I. $(OPT) -fPIC -L$(CONDA_PREFIX)/lib
 
-test: tree.o test_su.cpp biom.o unifrac.o skbio_alt.o api.o
-	$(CXX) $(CPPFLAGS) $(EXEFLAGS) test_su.cpp -o test_su tree.o biom.o unifrac.o skbio_alt.o api.o -llz4 $(BLASLIB) -lpthread
-	$(CXX) $(CPPFLAGS) $(EXEFLAGS) test_ska.cpp -o test_ska skbio_alt.o tree.o biom.o unifrac.o api.o -llz4 $(BLASLIB) -lpthread
-	$(CXX) $(CPPFLAGS) $(EXEFLAGS) test_api.cpp -o test_api tree.o biom.o unifrac.o skbio_alt.o api.o -llz4 $(BLASLIB) -lpthread
+ifeq ($(PLATFORM),Darwin)
+  LDDFLAGS += -Wl,-rpath,$(PREFIX)/lib
+else
+  LDDFLAGS += -Wl,-rpath-link,$(PREFIX)/lib
+endif
+BASE_LDDFLAGS = $(LDDFLAGS)
+ 
+R_LDFLAGS = -llz4 $(BLASLIB)
 
-main: tree.o biom.o unifrac.o cmd.o skbio_alt.o api.o
-	$(CXX) $(CPPFLAGS) $(EXEFLAGS) su.cpp -o ssu tree.o biom.o unifrac.o cmd.o skbio_alt.o api.o -lhdf5_cpp -llz4 $(BLASLIB) -lpthread
-	$(CXX) $(CPPFLAGS) $(EXEFLAGS) faithpd.cpp -o faithpd tree.o biom.o unifrac.o cmd.o skbio_alt.o api.o -lhdf5_cpp -llz4 $(BLASLIB) -lpthread
+UFCMP_LIBS=libssu_cpu.so
+UFCMP_LINK=-lssu_cpu
+ifdef ACC_CXX
+	# Tell the generic code we will be building the ACC code, too
+	CPPFLAGS += -DUNIFRAC_ENABLE_ACC=1
+
+	UFCMP_LIBS+= libssu_acc.so
+	UFCMP_LINK+= -lssu_acc
+
+        R_LDFLAGS += -lssu_acc
+
+	ACC_CPPFLAGS += -mp -acc
+	ACC_CPPFLAGS += -Wall  -std=c++11 -pedantic -I. -fPIC -L$(CONDA_PREFIX)/lib
+
+	ifdef DEBUG
+                ACC_OPT = -g
+	else
+                ACC_OPT = -fast
+	endif
+        ACC_CPPFLAGS += $(ACC_OPT)
+
+        ifeq ($(PERFORMING_CONDA_BUILD),True)
+          ACC_CPPFLAGS += -ta=tesla:ccall
+        else
+          ACC_CPPFLAGS += -ta=tesla
+        endif
+        # optional info
+        ACC_CPPFLAGS += -Minfo=accel
+
+        # use the GNU OMP library to avoid conflicts
+        ACC_LDDFLAGS = -shared -mp -acc -Wl,-rpath-link,$(PREFIX)/lib -L$(CONDA_PREFIX)/lib -lgomp -Bstatic_pgi
+
+        ifeq ($(PERFORMING_CONDA_BUILD),True)
+                ACC_CPPFLAGS += -tp=px
+        endif
+endif
+
+ifeq ($(PLATFORM),Darwin)
+  TEST_DEPS = -lssu
+else
+  TEST_DEPS = -lssu -lssu_internal
+endif
+
+test_su: test_su.cpp libssu.so
+	$(H5CXX) $(CPPFLAGS) $(EXEFLAGS) test_su.cpp -o test_su $(TEST_DEPS) -lpthread
+
+test_ska: test_ska.cpp libssu.so
+	$(H5CXX) $(CPPFLAGS) $(EXEFLAGS) test_ska.cpp -o test_ska $(TEST_DEPS) -lpthread
+
+test_api: test_api.cpp libssu.so
+	$(H5CXX) $(CPPFLAGS) $(EXEFLAGS) test_api.cpp -o test_api $(TEST_DEPS) -lpthread
+
+test: test_su test_ska test_api
+	# test = (su,ska,api)
+
+ssu: su.cpp libssu.so
+	$(H5CXX) $(CPPFLAGS) $(EXEFLAGS) su.cpp -o ssu -lssu -lpthread
 	cp ssu ${PREFIX}/bin/
+
+faithpd: faithpd.cpp libssu.so
+	$(H5CXX) $(CPPFLAGS) $(EXEFLAGS) faithpd.cpp -o faithpd -lssu -lpthread
 	cp faithpd ${PREFIX}/bin/
+
+main: ssu faithpd
+	# main == (ssu,faithpd)
 
 rapi_test: main
 	mkdir -p ~/.R
-	if [ -a ~/.R/Makevars ] ; \
+	if [ -e ~/.R/Makevars ] ; \
 	then \
 		echo "WARNING: OVERWRITING ~/.R/Makevars" ; \
 		echo "The original Makevars file has been copied to ~/.R/Makevars" ;\
@@ -112,23 +137,60 @@ rapi_test: main
 	echo CXX1X=h5c++ > ~/.R/Makevars
 	echo CXX=h5c++ >> ~/.R/Makevars 
 	echo CC=h5c++ >> ~/.R/Makevars
-	echo LDFLAGS=-llz4 $(BLASLIB) >> ~/.R/Makevars
+	echo LDFLAGS=$(R_LDFLAGS) >> ~/.R/Makevars
 	Rscript R_interface/rapi_test.R
 	
-api: tree.o biom.o unifrac.o cmd.o skbio_alt.o api.o
-	$(CXX) $(LDDFLAGS) -o libssu.so tree.o biom.o unifrac.o cmd.o skbio_alt.o api.o -lc -lhdf5_cpp -llz4 $(BLASLIB) -L$(PREFIX)/lib
+ifeq ($(PLATFORM),Darwin)
+
+# We never use ACC under MacOS, so keep it simple
+
+libssu.so: tree.o biom.o unifrac.o unifrac_internal.o unifrac_cmp_cpu.o cmd.o skbio_alt.o api.o 
+	$(H5CXX) $(LDDFLAGS) -o libssu.so tree.o biom.o unifrac.o unifrac_internal.o unifrac_cmp_cpu.o cmd.o skbio_alt.o api.o -lc -lhdf5_cpp -llz4 $(BLASLIB)
 	cp libssu.so ${PREFIX}/lib/
+
+else
+
+libssu.so: biom.o unifrac.o cmd.o api.o $(UFCMP_LIBS) libssu_internal.so
+	$(H5CXX) $(LDDFLAGS) -o libssu.so biom.o unifrac.o cmd.o api.o $(UFCMP_LINK) -lssu_internal -lc -llz4 
+	cp libssu.so ${PREFIX}/lib/
+
+libssu_internal.so: tree.o skbio_alt.o unifrac_internal.o
+	$(H5CXX) $(LDDFLAGS) -o libssu_internal.so tree.o skbio_alt.o unifrac_internal.o -lc -lhdf5_cpp $(BLASLIB)
+	cp libssu_internal.so ${PREFIX}/lib/
+
+libssu_cpu.so: unifrac_cmp_cpu.o libssu_internal.so
+	$(CXX) $(BASE_LDDFLAGS) -o libssu_cpu.so unifrac_cmp_cpu.o -lssu_internal -lc
+	cp libssu_cpu.so ${PREFIX}/lib/
+
+libssu_acc.so: unifrac_cmp_acc.o libssu_internal.so
+	$(ACC_CXX) $(ACC_LDDFLAGS) -o libssu_acc.so unifrac_cmp_acc.o -lssu_internal -lc
+	cp libssu_acc.so ${PREFIX}/lib/
+
+endif
+
+api: libssu.so
+	# api == libssu.so
 
 capi_test: api
 	gcc -std=c99 capi_test.c -lssu -L${PREFIX}/lib -Wl,-rpath,${PREFIX}/lib -o capi_test
 	export LD_LIBRARY_PATH="${PREFIX}/lib":"./capi_test"
 
 api.o: api.cpp api.hpp unifrac.hpp skbio_alt.hpp biom.hpp tree.hpp
-	$(CXX) $(CPPFLAGS) api.cpp -c -o api.o -fPIC
+	$(H5CXX) $(CPPFLAGS) api.cpp -c -o api.o -fPIC
 
-%.o: %.cpp %.hpp
+unifrac.o: unifrac.cpp unifrac.hpp unifrac_internal.hpp unifrac_cmp.hpp biom_interface.hpp tree.hpp
 	$(CXX) $(CPPFLAGS) -c $< -o $@
 
+unifrac_cmp_cpu.o: unifrac_cmp.cpp unifrac_cmp.hpp unifrac_internal.hpp unifrac.hpp unifrac_task.cpp unifrac_task.hpp biom_interface.hpp tree.hpp
+	$(CXX) $(CPPFLAGS) -Wno-unknown-pragmas -c $< -o $@
+
+unifrac_cmp_acc.o: unifrac_cmp.cpp unifrac_cmp.hpp unifrac_internal.hpp unifrac.hpp unifrac_task.cpp unifrac_task.hpp biom_interface.hpp tree.hpp
+	$(ACC_CXX) $(ACC_CPPFLAGS) -c $< -o $@
+
+
+%.o: %.cpp %.hpp
+	$(H5CXX) $(CPPFLAGS) -c $< -o $@
+
 clean:
-	-rm -f *.o ssu
+	-rm -f *.o *.so ssu faithpd test_su test_api test_ska
 
